--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-	"name": "chat-app",
-	"version": "1.0.0",
-	"description": "",
-	"main": "server.js",
-	"scripts": {
-		"server": "nodemon backend/server.js",
-		"start": "node backend/server.js",
-		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
-	},
-	"type": "module",
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"axios": "^1.7.7",
-		"bcryptjs": "^2.4.3",
-		"cookie-parser": "^1.4.6",
-		"dotenv": "^16.4.1",
-		"express": "^4.18.2",
-		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^8.1.1",
-		"socket.io": "^4.7.4"
-	},
-	"devDependencies": {
-		"nodemon": "^3.0.3"
-	}
+  "name": "chat-app",
+  "version": "1.0.0",
+  "description": "A full-stack chat app",
+  "main": "server.js",
+  "scripts": {
+    "server": "nodemon backend/server.js",  // Start the backend with nodemon (development mode)
+    "start": "node backend/server.js",  // Start the backend server in production mode
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"  // Install both frontend and backend, then build frontend
+  },
+  "type": "module",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
+    "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"  // For development server auto-reload
+  }
 }
